--- a/file.ipynb
+++ b/file.ipynb
@@ -9304,7 +9304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9313,15 +9313,51 @@
     "# Define the hyperparameter grid for grid search\n",
     "param_grid = {\n",
     "    'fit_intercept': [True, False],\n",
-    "    'normalize': [True, False]\n",
+    "    'copy_X': [True, False],\n",
+    "    'positive': [True, False]\n",
+    "    \n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n",
+      "[CV] END .....copy_X=True, fit_intercept=True, positive=True; total time=  44.8s\n",
+      "[CV] END .....copy_X=True, fit_intercept=True, positive=True; total time=   2.8s\n",
+      "[CV] END .....copy_X=True, fit_intercept=True, positive=True; total time=   1.6s\n",
+      "[CV] END ....copy_X=True, fit_intercept=True, positive=False; total time=  50.7s\n",
+      "[CV] END ....copy_X=True, fit_intercept=True, positive=False; total time=   1.0s\n",
+      "[CV] END ....copy_X=True, fit_intercept=True, positive=False; total time=   1.6s\n",
+      "[CV] END ....copy_X=True, fit_intercept=False, positive=True; total time=   0.7s\n",
+      "[CV] END ....copy_X=True, fit_intercept=False, positive=True; total time=   0.6s\n",
+      "[CV] END ....copy_X=True, fit_intercept=False, positive=True; total time=   0.5s\n",
+      "[CV] END ...copy_X=True, fit_intercept=False, positive=False; total time=   1.0s\n",
+      "[CV] END ...copy_X=True, fit_intercept=False, positive=False; total time=   1.0s\n",
+      "[CV] END ...copy_X=True, fit_intercept=False, positive=False; total time=   1.0s\n",
+      "[CV] END ....copy_X=False, fit_intercept=True, positive=True; total time=   1.7s\n",
+      "[CV] END ....copy_X=False, fit_intercept=True, positive=True; total time=   1.4s\n",
+      "[CV] END ....copy_X=False, fit_intercept=True, positive=True; total time=   1.3s\n",
+      "[CV] END ...copy_X=False, fit_intercept=True, positive=False; total time=   0.9s\n",
+      "[CV] END ...copy_X=False, fit_intercept=True, positive=False; total time=   1.1s\n",
+      "[CV] END ...copy_X=False, fit_intercept=True, positive=False; total time=   0.9s\n",
+      "[CV] END ...copy_X=False, fit_intercept=False, positive=True; total time=   0.5s\n",
+      "[CV] END ...copy_X=False, fit_intercept=False, positive=True; total time=   0.5s\n",
+      "[CV] END ...copy_X=False, fit_intercept=False, positive=True; total time=   0.5s\n",
+      "[CV] END ..copy_X=False, fit_intercept=False, positive=False; total time=   0.9s\n",
+      "[CV] END ..copy_X=False, fit_intercept=False, positive=False; total time=   0.9s\n",
+      "[CV] END ..copy_X=False, fit_intercept=False, positive=False; total time=   0.8s\n",
+      "Best parameters found:  {'copy_X': True, 'fit_intercept': True, 'positive': True}\n",
+      "Best score found:  0.2886749558178912\n"
+     ]
+    }
+   ],
    "source": [
     "# Perform grid search\n",
     "grid_search = GridSearchCV(estimator=lr_model, param_grid=param_grid, \n",
@@ -9334,36 +9370,51 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Saving the Best RF Model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'rf_random' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39m# Save the best model obtained from the random search using pickle\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mbest_random_forest_model.pkl\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m model_file:\n\u001b[1;32m----> 5\u001b[0m     pickle\u001b[39m.\u001b[39mdump(rf_random\u001b[39m.\u001b[39mbest_estimator_, model_file)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'rf_random' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test score:  0.40307440343648815\n"
      ]
     }
    ],
    "source": [
-    "import pickle\n",
-    "\n",
+    "# Evaluate the model on the test set\n",
+    "test_score = grid_search.best_estimator_.score(X_eval, y_eval)\n",
+    "print(\"Test score: \", test_score)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " A test score of 0.403 indicates a moderate level of predictive power."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving the Best  Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save the best model obtained from the random search using pickle\n",
-    "with open('best_random_forest_model.pkl', 'wb') as model_file:\n",
-    "    pickle.dump(rf_random.best_estimator_, model_file)\n"
+    "lr_model = grid_search.best_estimator_\n",
+    "\n",
+    "with open('lr_model.pkl', 'wb') as model_file:\n",
+    "    pickle.dump(lr_model, model_file)"
    ]
   }
  ],
